--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
     <title>ProgMug.net</title>
   </head>
   <body>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+        font-family: 'Open Sans', sans-serif;
+      }
+      </style>
     <noscript>
       <strong>We're sorry but webpack doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
