--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,19 @@
         margin: 0;
         font-family: 'Open Sans', sans-serif;
       }
+      ::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+  background: #004E52;
+  border-radius: 20px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
       </style>
     <noscript>
       <strong>We're sorry but webpack doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
