--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
-  background: #004E52;
+  background: rgb(0, 47, 49);
   border-radius: 20px;
 }
 ::-webkit-scrollbar-thumb:hover {
