--- a/public/index.html
+++ b/public/index.html
@@ -36,4 +36,14 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127909984-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-127909984-3');
+</script>
+
 </html>
